Remove copy error and get help button from error notification